// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default table header 1`] = `
<thead
  className="header"
>
  <tr />
</thead>
`;

exports[`should render table header with a header cell 1`] = `
<thead
  className="header"
>
  <tr>
    <TableHeaderCell
      minWidth="small"
    />
  </tr>
</thead>
`;
